[tool.poetry]
name = "crudapi"
version = "0.2.0"
description = "The easiest way to create your Restful CRUD APIs"
readme = "README.md"
homepage = "https://github.com/unmateo/crudapi"
repository = "https://github.com/unmateo/crudapi"
documentation = "https://github.com/unmateo/crudapi"
authors = ["Mateo Harfuch <mharfuch@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.68.1"
python = "^3.9"
sqlmodel = "^0.0.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
requests = "^2.26.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
