[tool.poetry]
name = "crudapi"
version = "0.5.0"
description = "The easiest way to create your Restful CRUD APIs"
readme = "README.md"
homepage = "https://github.com/unmateo/crudapi"
repository = "https://github.com/unmateo/crudapi"
documentation = "https://github.com/unmateo/crudapi"
authors = ["Mateo Harfuch <mharfuch@gmail.com>"]

[tool.poetry.dependencies]
fastapi = "^0.75.0"
python = "^3.9"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
uvicorn = "^0.17.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
